<resources>
    <string name="app_name">Assignment_1</string>
    <string name="Name">Full Name</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Register">Regisetr</string>
    <string name="Username">Username</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Sex">Gender</string>
    <string name="StreetAddress">Street Address</string>
    <string name="DOB">Date Of Birth</string>
    <string name="Submit">Submit</string>
    <string name="AddPhoto">Add Photo +</string>
    <string name="android_image">Android Image</string>
    <string name="textview_hint">Press the button to get the last known location</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f \n Timestamp: %3$tr"</string>
    <string name="no_location">No Location Found</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates were supplied to the Geocoder</string>
    <string name="no_address_found">No Addresses Found</string>
    <string name="address_text">" %1$s "</string>
    <string name="loading">Loading</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="date_count_format">" %1$s \n Timestamp: %2$tr"</string>
</resources>
